--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
   <title>Male algoritmy - domaci ukol</title>
 </head>
 <body>
+ 
+  <h2>1. Výpis čísel:</h2>
+  <div id="allNumbers"></div>
 
+  <h2>2. Druhé mocniny:</h2>
+  <div id="squaresNumbers"></div>
+
+  <h2>3. Záporné čísla:</h2>
+  <div id="negativeNumbers"></div>
+
+  <h2>4. Absolútne hodnoty:</h2>
+  <div id="absoluteValues"></div>
+
+  <h2>5. Párne čísla:</h2>
+  <div id="evenNumbers"></div>
+
+  <h2>6. Absolútne hodnoty deliteľné 3:</h2>
+  <div id="divisible3"></div>
+
+  <h2>7. Vzdialenosť od čísla 5:</h2>
+  <div id="distance5"></div>
+  
+  
   <script type="module" src="index.js"></script>
 </body>
 </html>
