--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
 
   <h2>7. Vzdialenosť od čísla 5:</h2>
   <div id="distance5"></div>
-  
+
+  <h2>8. Druhé mocniny vzdialeností čísel od čísla 5:</h2>
+  <div id="squares5"></div>
+
+  <h2>9. Koľko je záporných čísel:</h2>
+  <div id="countNegative"></div>
+
+  <h2>10. Súčet všetkých čísel v poli:</h2>
+  <div id="sumAll"></div>
+
+  <h2>11. Súčet priemeru čísel v poli:</h2>
+  <div id="average"></div>
+
+  <h2>12. Súčet všetkých kladných čísel v poli:</h2>
+  <div id="positiveSum"></div>
   
   <script type="module" src="index.js"></script>
 </body>
