--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
   <h2>12. Súčet všetkých kladných čísel v poli:</h2>
   <div id="positiveSum"></div>
-  
+
+  <link rel="stylesheet" href="/styles.css">
   <script type="module" src="index.js"></script>
 </body>
 </html>
